<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#007299"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/email_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#E1FFFFFF"
        android:ems="10"
        android:hint="@string/email_or_username"
        android:textColor="#E1FFFF"
        android:textColorHint="#E1FFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pass_word"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#E1FFFFFF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#E1FFFF"
        android:textColorHint="#E1FFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_username" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#E1FFFF"
        android:text="@string/sign_in"
        android:textColor="#007299"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_word" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#E1FFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/sign_in"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <TextView
        android:id="@+id/join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/join_now"
        android:textColor="#E1FFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/sign_in"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>